--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "home/.vim/bundle/ctrlp"]
 	path = home/.vim/bundle/ctrlp
 	url = https://github.com/kien/ctrlp.vim.git
+[submodule "home/.vim/bundle/handlebars"]
+	path = home/.vim/bundle/handlebars
+	url = git://github.com/nono/vim-handlebars.git
