--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,9 @@
 [submodule "home/.vim/bundle/nerdcommenter"]
 	path = home/.vim/bundle/nerdcommenter
 	url = git@github.com:scrooloose/nerdcommenter.git
+[submodule "home/.vim/bundle/vim-haml"]
+	path = home/.vim/bundle/vim-haml
+	url = https://github.com/tpope/vim-haml.git
+[submodule "home/.vim/bundle/vim-gradle"]
+	path = home/.vim/bundle/vim-gradle
+	url = https://github.com/tfnico/vim-gradle.git
