--- a/.gitmodules
+++ b/.gitmodules
@@ -34,9 +34,6 @@
 [submodule "home/.vim/bundle/html5"]
 	path = home/.vim/bundle/html5
 	url = https://github.com/othree/html5.vim.git
-[submodule "home/.vim/bundle/vim-airline"]
-	path = home/.vim/bundle/vim-airline
-	url = https://github.com/bling/vim-airline
 [submodule "home/.vim/bundle/vim-fugitive"]
 	path = home/.vim/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
@@ -64,3 +61,6 @@
 [submodule "home/.vim/bundle/vim-flow"]
 	path = home/.vim/bundle/vim-flow
 	url = git://github.com/flowtype/vim-flow.git
+[submodule "home/.vim/bundle/vim-airline"]
+	path = home/.vim/bundle/vim-airline
+	url = https://github.com/vim-airline/vim-airline.git
