--- a/.gitmodules
+++ b/.gitmodules
@@ -27,7 +27,7 @@
 	url = https://github.com/pangloss/vim-javascript.git
 [submodule "home/.vim/bundle/ctrlp"]
 	path = home/.vim/bundle/ctrlp
-	url = https://github.com/kien/ctrlp.vim.git
+	url = https://github.com/ctrlpvim/ctrlp.vim.git
 [submodule "home/.vim/bundle/handlebars"]
 	path = home/.vim/bundle/handlebars
 	url = git://github.com/nono/vim-handlebars.git
