--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "home/.vim/bundle/vim-airline-themes"]
 	path = home/.vim/bundle/vim-airline-themes
 	url = https://github.com/vim-airline/vim-airline-themes
+[submodule "home/.vim/bundle/vim-elm"]
+	path = home/.vim/bundle/vim-elm
+	url = https://github.com/ElmCast/elm-vim.git
