--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "home/.vim/bundle/vim-elm"]
 	path = home/.vim/bundle/vim-elm
 	url = https://github.com/ElmCast/elm-vim.git
+[submodule "home/.vim/bundle/flatlandia"]
+	path = home/.vim/bundle/flatlandia
+	url = https://github.com/jordwalke/flatlandia.git
