--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,6 @@
 [submodule "home/.vim/bundle/vipsql"]
 	path = home/.vim/bundle/vipsql
 	url = git@github.com:martingms/vipsql.git
+[submodule "home/.local/share/nvim/site/pack/git-plugins/start/vipsql"]
+	path = home/.local/share/nvim/site/pack/git-plugins/start/vipsql
+	url = https://github.com/martingms/vipsql
