--- a/.gitmodules
+++ b/.gitmodules
@@ -82,6 +82,7 @@
 [submodule "home/.local/share/nvim/site/pack/git-plugins/start/YouCompleteMe"]
 	path = home/.local/share/nvim/site/pack/git-plugins/start/YouCompleteMe
 	url = https://github.com/Valloric/YouCompleteMe.git
+    branch = master
 [submodule "home/.local/share/nvim/site/pack/git-plugins/opt/flatlandia"]
 	path = home/.local/share/nvim/site/pack/git-plugins/opt/flatlandia
 	url = https://github.com/jordwalke/flatlandia.git
@@ -97,3 +98,6 @@
 [submodule "home/.local/share/nvim/site/pack/git-plugins/start/vipsql"]
 	path = home/.local/share/nvim/site/pack/git-plugins/start/vipsql
 	url = https://github.com/martingms/vipsql
+[submodule "home/.local/share/nvim/site/pack/git-plugins/start/pgsql"]
+	path = home/.local/share/nvim/site/pack/git-plugins/start/pgsql
+	url = https://github.com/lifepillar/pgsql.vim.git
