--- a/.gitmodules
+++ b/.gitmodules
@@ -13,7 +13,7 @@
 [submodule "home/.local/share/nvim/site/pack/git-plugins/start/YouCompleteMe"]
 	path = home/.local/share/nvim/site/pack/git-plugins/start/YouCompleteMe
 	url = https://github.com/Valloric/YouCompleteMe.git
-    branch = master
+	branch = master
 [submodule "home/.local/share/nvim/site/pack/git-plugins/opt/flatlandia"]
 	path = home/.local/share/nvim/site/pack/git-plugins/opt/flatlandia
 	url = https://github.com/jordwalke/flatlandia.git
@@ -23,3 +23,6 @@
 [submodule "home/.local/share/nvim/site/pack/git-plugins/start/pgsql"]
 	path = home/.local/share/nvim/site/pack/git-plugins/start/pgsql
 	url = https://github.com/lifepillar/pgsql.vim.git
+[submodule "home/.local/share/nvim/site/pack/git-plugins/start/vim-hcl"]
+	path = home/.local/share/nvim/site/pack/git-plugins/start/vim-hcl
+	url = https://github.com/jvirtanen/vim-hcl.git
