--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -11,3 +11,6 @@
 #        username = ljodal
 [init]
 	defaultBranch = main
+
+[alias]
+    gone = "!f() { git fetch --all --prune; git branch -vv | awk '/: gone]/{print $1}' | xargs git branch -D; }; f"
