--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -1,10 +1,7 @@
 {
-    "diagnostic.errorSign": "→",
-    "diagnostic.warningSign": "→",
-    "diagnostic.infoSign": "→",
-    "diagnostic.hintSign": "→",
-    "python.linting.flake8Enabled": true,
-    "python.linting.mypyEnabled": true,
-    "python.analysis.typeCheckingMode": "off",
-    "pyright.organizeimports.provider": "isort"
+    "diagnostic.errorSign": "››",
+    "diagnostic.warningSign": "››",
+    "diagnostic.infoSign": "››",
+    "diagnostic.hintSign": "››",
+    "python.analysis.typeCheckingMode": "off"
 }
