Upgrade to latest coc version

--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -3,5 +3,6 @@
     "diagnostic.warningSign": "››",
     "diagnostic.infoSign": "››",
     "diagnostic.hintSign": "››",
+    "suggest.noselect": true,
     "python.analysis.typeCheckingMode": "off"
 }
